# consec2025_he_template

./: README.md  pyproject.toml
docs/: submission_guides.md
src/he/: __init__.py  elgamal.py  lifted_elgamal.py
tests/: test_kadai1.py  test_kadai2.py  test_kadai3.py
